# fastapi-employees-app

./: .env.example  ARCHITECTURE.md  README.md  SERVICE_REQUIREMENTS.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 8065e127027e_create_employee_division_user_tables.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: employee.py
app/core/: config.py
app/db/: session.py
app/db/models/: __init__.py  base.py  division.py  employee.py  user.py
app/db/repositories/: employee.py
app/schemas/: employee.py
app/services/: employee_service.py
